# woof

./: .gitignore  Cargo.toml  README.md  example-out.ts  example.locale  flake.nix  todo.md
.github/workflows/: release.yaml
npm/: node-shim.js
scripts/: release-npm.js
src/: collect.rs  context.rs  errors.rs  generate.rs  interpolations.rs  main.rs  parse.rs  sanitize.rs
src/snapshots/: woof__interpolations__tests__brace_escape_sequences.snap  woof__interpolations__tests__complex_interpolation_scenarios.snap  woof__interpolations__tests__interpolation_edge_cases.snap  woof__interpolations__tests__invalid_interpolation_identifiers.snap  woof__interpolations__tests__valid_interpolation_identifiers.snap  woof__parse__tests__brace_escape_sequences.snap  woof__parse__tests__brace_escapes_in_template_generation.snap  woof__parse__tests__complex_interpolation_scenarios.snap  woof__parse__tests__error_message_snapshots.snap  woof__parse__tests__interpolation_edge_cases.snap  woof__parse__tests__multibyte_characters_with_interpolation.snap  woof__parse__tests__template_for_locale_basic.snap  woof__parse__tests__template_for_locale_multiple_interpolations.snap  woof__parse__tests__template_for_locale_sanitized_keys.snap  woof__parse__tests__template_for_locale_with_escaping.snap  woof__parse__tests__template_generation_edge_cases.snap  woof__parse__tests__valid_interpolation_identifiers.snap  woof__sanitize__tests__alphanumeric_keys.snap  woof__sanitize__tests__brace_escape_sequences.snap  woof__sanitize__tests__combined_escaping.snap  woof__sanitize__tests__edge_cases.snap  (+10 more)
(+22 files in other folders)
